# src/main/java/com/isanorte/constructora_api/service/IEmpresaService.java
@@ -5,7 +5,9 @@ import java.util.UUID;
 
 import com.isanorte.constructora_api.dto.request.EmpresaRequest;
 import com.isanorte.constructora_api.dto.request.EmpresaUpdateRequest;
+import com.isanorte.constructora_api.dto.request.RedSocialRequest;
 import com.isanorte.constructora_api.dto.response.EmpresaResponse;
+import com.isanorte.constructora_api.dto.response.RedSocialResponse;
 import com.isanorte.constructora_api.model.Empresa;
 
 public interface IEmpresaService extends IGenericService<Empresa, UUID> {
@@ -19,4 +21,10 @@ public interface IEmpresaService extends IGenericService<Empresa, UUID> {
     EmpresaResponse createResponse(EmpresaRequest request);
 
     EmpresaResponse update(UUID id, EmpresaUpdateRequest request);
+
+    RedSocialResponse createRedSocial(UUID empresaId, RedSocialRequest request);
+
+    RedSocialResponse updateRedSocial(UUID empresaId, UUID redSocialId, RedSocialRequest request);
+
+    void deleteRedSocial(UUID empresaId, UUID redSocialId);
 }
